--- a/package.json
+++ b/package.json
@@ -1,59 +1,85 @@
 {
-  "name": "otc-static-mobile",
+  "name": "OTCMAKER",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "OTCMAKER project",
+  "author": "liudewei",
+  "private": true,
   "scripts": {
-    "init": "webpack --progress --config webpack.dev.config.js",
-    "dev": "webpack-dev-server --content-base ./ --open --inline --hot --compress --history-api-fallback --config webpack.dev.config.js",
-    "build": "webpack --progress --hide-modules --config webpack.prod.config.js",
-    "lint": "eslint --fix --ext .js,.vue src"
+    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
+    "start": "npm run dev",
+    "lint": "eslint --ext .js,.vue src",
+    "build": "node build/build.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://liudewei@bitbucket.org/itering/otc-static-mobile.git"
-  },
-  "author": "",
-  "license": "MIT",
   "dependencies": {
-    "axios": "^0.15.3",
-    "iview": "^2.7.4",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
-    "vue-i18n": "^5.0.3",
-    "vuex": "^2.2.1",
-    "clipboard": "^1.5.12",
-    "html2canvas": "^0.5.0-beta4"
+    "vuex": "^3.0.1",
+    "vuex-i18n": "^1.10.5"
   },
   "devDependencies": {
-    "autoprefixer-loader": "^3.2.0",
-    "babel": "^6.23.0",
-    "babel-core": "^6.23.1",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-transform-runtime": "^6.12.0",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-runtime": "^6.11.6",
-    "css-loader": "^0.28.7",
-    "eslint": "^3.12.2",
-    "eslint-plugin-html": "^1.7.0",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.5",
-    "html-loader": "^0.5.1",
-    "html-webpack-plugin": "^2.28.0",
-    "iview-loader": "^1.0.0",
-    "less": "^2.7.3",
-    "less-loader": "^4.0.5",
-    "style-loader": "^0.19.1",
-    "url-loader": "^0.6.2",
-    "vue-hot-reload-api": "^2.2.4",
-    "vue-html-loader": "^1.2.3",
-    "vue-loader": "^13.5.0",
-    "vue-style-loader": "^3.0.3",
-    "vue-template-compiler": "^2.2.1",
-    "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.9.2",
-    "webpack-merge": "^4.1.1",
-    "node-sass": "^3.10.1",
-    "sass-loader": "^4.0.2"
-  }
+    "async-validator": "^1.8.2",
+    "autoprefixer": "^7.1.2",
+    "axios": "^0.18.0",
+    "babel-core": "^6.22.1",
+    "babel-eslint": "^8.2.1",
+    "babel-helper-vue-jsx-merge-props": "^2.0.3",
+    "babel-loader": "^7.1.1",
+    "babel-plugin-component": "^1.1.1",
+    "babel-plugin-syntax-jsx": "^6.18.0",
+    "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-plugin-transform-vue-jsx": "^3.5.0",
+    "babel-preset-env": "^1.3.2",
+    "babel-preset-stage-2": "^6.22.0",
+    "chalk": "^2.0.1",
+    "copy-webpack-plugin": "^4.0.1",
+    "css-loader": "^0.28.0",
+    "element-ui": "^2.4.4",
+    "eslint": "^4.15.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-friendly-formatter": "^3.0.0",
+    "eslint-loader": "^1.7.1",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-node": "^5.2.0",
+    "eslint-plugin-promise": "^3.4.0",
+    "eslint-plugin-standard": "^3.1.0",
+    "eslint-plugin-vue": "^4.0.0",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "file-loader": "^1.1.4",
+    "friendly-errors-webpack-plugin": "^1.6.1",
+    "html-webpack-plugin": "^2.30.1",
+    "lodash": "^4.17.10",
+    "mint-ui": "^2.2.13",
+    "node-notifier": "^5.1.2",
+    "optimize-css-assets-webpack-plugin": "^3.2.0",
+    "ora": "^1.2.0",
+    "portfinder": "^1.0.13",
+    "postcss-import": "^11.0.0",
+    "postcss-loader": "^2.0.8",
+    "postcss-url": "^7.2.1",
+    "pug": "^2.0.3",
+    "qs": "^6.5.2",
+    "rimraf": "^2.6.0",
+    "semver": "^5.3.0",
+    "shelljs": "^0.7.6",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
+    "uglifyjs-webpack-plugin": "^1.1.1",
+    "url-loader": "^0.5.8",
+    "vue-loader": "^13.3.0",
+    "vue-style-loader": "^3.0.1",
+    "vue-template-compiler": "^2.5.2",
+    "webpack": "^3.6.0",
+    "webpack-bundle-analyzer": "^2.9.0",
+    "webpack-dev-server": "^2.9.1",
+    "webpack-merge": "^4.1.0"
+  },
+  "engines": {
+    "node": ">= 6.0.0",
+    "npm": ">= 3.0.0"
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 8"
+  ]
 }
