--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
     "pug": "^2.0.3",
+    "qrcode.vue": "^1.6.0",
     "qs": "^6.5.2",
     "rimraf": "^2.6.0",
     "semver": "^5.3.0",
@@ -66,6 +67,7 @@
     "stylus-loader": "^3.0.2",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
+    "vue-clipboard2": "^0.2.1",
     "vue-lazyload": "^1.2.6",
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
