首页重定向修改 chat的配置修改

--- a/configure.json
+++ b/configure.json
@@ -28,7 +28,7 @@
     }
   ],
   "DEFAULT_LANGUAGE": "zh-HK",
-  "CHAT_URL": "https://notice.otcmaker.com/chat",
+  "CHAT_URL": "/chat",
   "CHAT_TIMEOUT": 90000,
   "ACTIVITIES_URL": "/hc/api/internal/recent_activities",
   "axios_TIMEOUT": 20000,
