--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "vue": "^2.5.2",
+    "vue-photo-preview": "^1.1.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
     "vuex-i18n": "^1.10.5"
@@ -27,7 +28,6 @@
     "babel-plugin-component": "^1.1.1",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-plugin-transform-vue-jsx": "^3.5.0",
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
     "bignumber.js": "^7.2.1",
